kube/deployment.yml
---
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  type: ClusterIP
  ports:
    - name: https
      port: 443
      targetPort: 10443
  selector:
    name: app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      name: app
  template:
    metadata:
      labels:
        name: app
    spec:
      securityContext:
        fsGroup: 1000
        runAsNonRoot: true
      containers:
      - name: httpbin
        image: kennethreitz/httpbin
        securityContext:
          runAsUser: 1000
        command:
        - gunicorn
        - -b
        - 0.0.0.0:8080
        - httpbin:app
        - -k
        - gevent
      - name: app
        image: quay.io/appvia/kore-example:latest
        resources:
          limits:
            cpu: 20m
            memory: 64Mi
          requests:
            cpu: 2m
            memory: 8Mi
        ports:
        - name: https
          containerPort: 10443
        readinessProbe:
          httpGet:
            path: /
            port: 10443
            scheme: HTTPS
          initialDelaySeconds: 20
          successThreshold: 3
          timeoutSeconds: 5
        livenessProbe:
          httpGet:
            path: /
            port: 10443
            scheme: HTTPS
          initialDelaySeconds: 360
          timeoutSeconds: 10
